mise à jour des routes et reorganisation des fichiers

--- a/front/html/index.html
+++ b/front/html/index.html
@@ -9,13 +9,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet" />
-
+    <link href="../style.css" rel="stylesheet" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
+    <a href="/api/campaigns" class="button">CLICK 1</a>
+    <a href="/2" class="button">CLICK 2</a>
+    <a href="/order" class="button">CLICK 3</a>
     <header>
       <div class="limitedWidthBlockContainer informations">
         <div class="limitedWidthBlock">
